# cs489-project

./: .cursorrules  .env.template  .gitattributes  .gitignore  CHANGES.md  Dockerfile  README.md  api.py  audio-requirements.txt  docker-compose.yml  musicxml_to_wav.py  p1.py  pyproject.toml  requirements.txt  run_api.py  setup.js  test-input.wav.REMOVED.git-id  wav_to_sheet_music.py
backend/: .gitignore  README.md  alembic.ini  manage.py  pyproject.toml  requirements.txt  setup.js  youtube-cookies.txt
backend/app/: check_dependencies.py  config.py  create_sheet_music.py  load_audio.py  main.py  process_audio.py  run_api.py  utils.py  visualize.py  wav_to_sheet_music.py
backend/app/db/: config.py  migrations.py
backend/app/models/: __init__.py  auth.py  base.py  schemas.py  score.py
backend/app/routers/: __init__.py  auth.py  home.py  scores.py
backend/app/routers/audio/: __init__.py  operations.py
backend/app/routers/conversion/: __init__.py  audio.py  online.py
backend/app/routers/files/: __init__.py  operations.py
backend/app/utils/: __init__.py  cleanup.py  logger.py  setup.py
backend/migrations/: env.py
backend/migrations/versions/: 11effa3994ec_user_model.py
backend/scripts/: cleanup_temp_files.py
dascore/: .eslintrc.json  bun.lockb  package-lock.json  package.json
dascore/app/: layout.tsx  page.tsx
dascore/app/musicxml-viewer/[fileId]/: page.tsx
dascore/components/: audioPlayer.tsx  conversionPanel.tsx  fileUpload.tsx  openSheetMusicDisplay.tsx  resultsPanel.tsx
dascore/lib/: apiUtils.ts
frontend/: bun.lockb  copy-pdf-worker.js  eslint.config.mjs  instant.perms.ts  instant.schema.ts  next.config.ts  openapi.json  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/callback/: page.tsx
frontend/app/musicxml-viewer/[fileId]/: page.tsx
frontend/app/roadmap/: page.tsx
frontend/app/scores/[id]/: ScoreClient.tsx  ScoreDetail.tsx  page.tsx  page.tsx.new
frontend/app/search/: SearchClient.tsx  page.tsx
frontend/app/signin/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: PdfViewer.tsx  RangeSelector.tsx  audioPlayer.tsx  conversionPanel.tsx  fileUpload.tsx  navbar.tsx  noteEditor.tsx  resultsPanel.tsx  scoreCard.tsx  scoreGrid.tsx  searchClient.tsx
frontend/components/auth/: AuthComponent.tsx  ClerkProviderWrapper.tsx
frontend/components/loading/: LoadingScreen.tsx  SnakeGame.tsx  index.ts
frontend/components/media/: SpotifyPlayer.tsx
frontend/components/ui/: slider.tsx  use-toast.ts
frontend/lib/: api-hooks.ts  apiUtils.ts  auth-context.tsx  instantdb.ts  spotify-api.ts
frontend/src/client/: models.ts  schemas.ts  services.ts
instructions/: todo.txt
scripts/: generate-client.sh
src/cs489_project/: .gitattributes  Dockerfile  __main__.py  api.py  fly.toml  requirements.txt  wav_to_sheet_music.py
