[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cs489-project"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "AbhiJ2706", email = "43829700+AbhiJ2706@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "librosa",
    "numpy",
    "soundfile",
    "scipy",
    "matplotlib",
    "pretty_midi",
    "noisereduce",
    "pedalboard"
]

[project.urls]
Documentation = "https://github.com/unknown/cs489-project#readme"
Issues = "https://github.com/unknown/cs489-project/issues"
Source = "https://github.com/unknown/cs489-project"

[tool.hatch.version]
path = "src/cs489_project/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cs489_project tests}"

[tool.coverage.run]
source_pkgs = ["cs489_project", "tests"]
branch = true
parallel = true
omit = [
  "src/cs489_project/__about__.py",
]

[tool.coverage.paths]
cs489_project = ["src/cs489_project", "*/cs489-project/src/cs489_project"]
tests = ["tests", "*/cs489-project/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
